=====================

CHANGELOG

=====================

"didv.py", "grid.py", and "sxm.py" updated on Mar 18, 2019 for Python 3.

"didv.py", "grid.py", and "sxm.py" have gone through numerous changes over the years.  As of Sept 2, 2018, these files are in Version 2.0.0.

"didv.py", "grid.py", and "sxm.py" written on Feb 12, 2014 by Dillon Wong for Python 2.7.6.  Version 1.0.0