@@ -4,6 +4,8 @@ CHANGELOG
 
 =====================
 
+"interactive_colorplot.py" added on May 18, 2019.
+
 "didv.py", "grid.py", and "sxm.py" updated on Mar 18, 2019 for Python 3.
 
 "didv.py", "grid.py", and "sxm.py" have gone through numerous changes over the years.  As of Sept 2, 2018, these files are in Version 2.0.0.
